Optimizes rendering and removes usage of the Javolution library.